--- a/src/components/Title/Title.sass
+++ b/src/components/Title/Title.sass
@@ -2,8 +2,8 @@
 	position: fixed
 	top: 200px
 	left: 50%
-	transform: translateX(calc(-25% + 50px))
+	transform: translateX(calc(-25% + 25px))
 	font-size: 40px
-	font-weight: 300
+	font-weight: bold
 	z-index: -1
-	letter-spacing: 2px
+	letter-spacing: 5px
