--- a/src/components/App/App.sass
+++ b/src/components/App/App.sass
@@ -8,30 +8,33 @@ body
 	height: 100vh
 	font-family: Hind,sans-serif
 	background-image: url('/img/body/bg.jpg')
+	background-position: center center
+	background-size: cover
 	background-attachment: fixed
-
+	&:after
+		content: ''
+		width: 100%
+		height: 100%
+		background-color: rgba(0, 0, 0, 0.5)
+		position: fixed
+		top: 0
+		z-index: -2
 .wrapper
 	display: flex
 	overflow: hidden
 	.nav
-		width: 210px
+		width: 200px
 		color: white
 		position: fixed
 		height: 100%
-		border-right: 1px solid rgba(32, 255, 54, 0.11)
+		border-right: 1px solid rgba(255, 255, 255, 0.7)
 		display: flex
 		flex-direction: column
 		justify-content: center
-		padding: 0 20px
+		padding: 0 10px
 	.main
 		width: 100%
-		margin-left: 250px
+		margin-left: 220px
 		color: white
 		min-height: 100vh
 		margin-right: 20px
-		
-#video-bg
-	position: fixed
-	top: 0
-	left: 0
-	z-index: -1
