--- a/src/components/Nav/Nav.sass
+++ b/src/components/Nav/Nav.sass
@@ -1,5 +1,6 @@
 ul
 	margin-bottom: 50px
+	margin-left: 10px
 	li
 		list-style: none
 		margin: 40px 0
@@ -36,7 +37,7 @@ ul
 			
 .navActive
 	text-shadow: 0 0 10px #fff
-	padding-left: 50px
+	padding-left: 20px
 	
 			
 			
