--- a/src/components/Portfolio/Portfolio.sass
+++ b/src/components/Portfolio/Portfolio.sass
@@ -1,11 +1,12 @@
 .portfolioWrapper
 	&__contents
 		margin-top: 120vh
-		background-color: #fff
+		background-color: #f1f1f1
 		color: black
 		border-radius: 10px 10px 0 0
 		padding: 20px
 		box-shadow: 0 0 10px #fff
+		
 		h3
 			text-align: center
 			padding: 10px
@@ -22,8 +23,8 @@
 				text-transform: uppercase
 				text-align: center
 			ul
+				margin-left: 0
 				li
-					
 					font-size: 12px
 					font-weight: 700
 					text-transform: uppercase
@@ -42,13 +43,15 @@
 					color: white
 		&__items
 			flex-grow: 3
-			flex-basis: 700px
+			flex-basis: 670px
 			display: flex
 			flex-wrap: wrap
 			justify-content: space-around
 			&--item
+				flex-grow: 1
+				flex-basis: 230px
+				display: flex
 				position: relative
-				max-width: 350px
 				margin: 20px
 				overflow: hidden
 				border-radius: 10px
@@ -92,3 +95,17 @@
 				img
 					width: 100%
 					height: 100%
+	.maseeg
+		max-width: 350px
+		background-color: rgba(15, 255, 40, 0.9)
+		position: fixed
+		bottom: 20px
+		left: calc(50% + 20px)
+		transform: translateX(-21%)
+		color: black
+		z-index: 100
+		padding: 10px
+		font-size: 20px
+		border: 5px solid rgba(11, 79, 19, 0.5)
+		border-radius: 5px
+		text-align: center
