--- a/src/components/Blog/ViewBlog/ViewBlog.sass
+++ b/src/components/Blog/ViewBlog/ViewBlog.sass
@@ -1,4 +1,4 @@
-.viewWrapperPortfolio
+.viewWrapperBlog
 	background-color: #f1f1f1
 	color: black
 	border-radius: 10px 10px 0 0
@@ -10,16 +10,9 @@
 		padding: 20px
 	&__item
 		&--img
-			position: relative
-			overflow-y: scroll
-			max-width: 600px
-			max-height: 700px
 			float: left
-			margin: 0 10px
-			transform: rotateY(14deg) rotateX(14deg)
-			box-shadow: -10px 10px 30px #141414
 			img
-				width: 100%		
+				padding: 20px
 	p
 		margin: 10px
 		
