--- a/src/components/App/App.sass
+++ b/src/components/App/App.sass
@@ -38,3 +38,18 @@ body
 		color: white
 		min-height: 100vh
 		margin-right: 20px
+		
+.maseeg
+	max-width: 350px
+	background-color: rgba(15, 255, 40, 0.9)
+	position: fixed
+	bottom: 20px
+	left: calc(50% + 20px)
+	transform: translateX(-21%)
+	color: black
+	z-index: 100
+	padding: 10px
+	font-size: 20px
+	border: 5px solid rgba(11, 79, 19, 0.5)
+	border-radius: 5px
+	text-align: center
