--- a/src/components/Blog/Blog.sass
+++ b/src/components/Blog/Blog.sass
@@ -3,6 +3,28 @@
 		margin-top: 120vh
 		background-color: #fff
 		color: black
-		border-radius: 10px
+		border-radius: 10px 10px 0 0
 		padding: 10px
-		margin-bottom: 20px
+		box-shadow: 0 0 10px #fff
+		min-height: 300px
+		a
+			text-decoration: none
+		h3
+			text-align: center
+			padding: 20px
+		img
+			float: left
+			padding: 20px
+		.content
+			position: relative
+			&__items
+				button
+					position: absolute
+					bottom: -10px
+					left: 50%
+					width: 100px
+					height: 20px
+					transform: translateX(-50%)
+			
+.clearfix
+	clear: both
