--- a/src/components/Portfolio/Portfolio.sass
+++ b/src/components/Portfolio/Portfolio.sass
@@ -14,42 +14,50 @@
 	.content
 		display: flex
 		flex-wrap: wrap
-		&__nav
-			flex-basis: 150px
-			flex-grow: 1
-			border-right: 1px solid rgba(24, 194, 41, 0.9)
-			h4
-				margin-top: 50px
-				text-transform: uppercase
-				text-align: center
-			ul
-				margin-left: 0
-				li
-					font-size: 12px
-					font-weight: 700
-					text-transform: uppercase
-					text-decoration: none
-					color: #60606e
-					padding: 5px
-					transition: all 0.3s linear
-					margin: 20px 0 0 20px
-					border-radius: 2px
-					cursor: pointer
-					max-width: 150px
-					letter-spacing: 1px
-				.active
-					margin-left: 10px
-					background-color: rgba(24, 194, 41, 0.9)
-					color: white
+		position: relative
+		min-height: 300px
+		//&__nav
+		//	flex-basis: 150px
+		//	flex-grow: 1
+		//	border-right: 1px solid rgba(24, 194, 41, 0.9)
+		//	h4
+		//		margin-top: 50px
+		//		text-transform: uppercase
+		//		text-align: center
+		//	ul
+		//		margin-left: 0
+		//		li
+		//			font-size: 12px
+		//			font-weight: 700
+		//			text-transform: uppercase
+		//			text-decoration: none
+		//			color: #60606e
+		//			padding: 5px
+		//			transition: all 0.3s linear
+		//			margin: 20px 0 0 20px
+		//			border-radius: 2px
+		//			cursor: pointer
+		//			max-width: 150px
+		//			letter-spacing: 1px
+		//		.active
+		//			margin-left: 10px
+		//			background-color: rgba(24, 194, 41, 0.9)
+		//			color: white
 		&__items
-			flex-grow: 3
-			flex-basis: 670px
 			display: flex
 			flex-wrap: wrap
 			justify-content: space-around
+			button
+				position: absolute
+				bottom: -10px
+				left: 50%
+				width: 100px
+				height: 20px
+				transform: translateX(-50%)
 			&--item
 				flex-grow: 1
 				flex-basis: 230px
+				max-height: 200px
 				display: flex
 				position: relative
 				margin: 20px
@@ -81,7 +89,7 @@
 							text-transform: uppercase
 							letter-spacing: 3px
 							margin-bottom: 15px
-						input[type='submit']
+						.more
 							cursor: pointer
 							width: 120px
 							background-color: transparent
@@ -90,22 +98,9 @@
 							color: white
 							font-size: 15px
 							border-radius: 5px
+							text-decoration: none
 							&:hover
 								color: black
 				img
 					width: 100%
 					height: 100%
-	.maseeg
-		max-width: 350px
-		background-color: rgba(15, 255, 40, 0.9)
-		position: fixed
-		bottom: 20px
-		left: calc(50% + 20px)
-		transform: translateX(-21%)
-		color: black
-		z-index: 100
-		padding: 10px
-		font-size: 20px
-		border: 5px solid rgba(11, 79, 19, 0.5)
-		border-radius: 5px
-		text-align: center
