--- a/src/components/Title/Title.sass
+++ b/src/components/Title/Title.sass
@@ -4,6 +4,8 @@
 	left: 50%
 	transform: translateX(calc(-25% + 25px))
 	font-size: 40px
+	text-shadow: 0 0 30px #efefef
 	font-weight: bold
+	-webkit-text-stroke: 2px rgba(0,0,0, 0.3)
 	z-index: -1
 	letter-spacing: 5px
