--- a/src/components/Blog/Blog.sass
+++ b/src/components/Blog/Blog.sass
@@ -4,27 +4,84 @@
 		background-color: #fff
 		color: black
 		border-radius: 10px 10px 0 0
-		padding: 10px
 		box-shadow: 0 0 10px #fff
 		min-height: 300px
+		padding: 20px 20px 40px 20px
 		a
 			text-decoration: none
 		h3
 			text-align: center
-			padding: 20px
-		img
-			float: left
-			padding: 20px
+			padding: 20px 0 30px
+			font-size: 30px
+			font-style: italic
+		
+			
 		.content
 			position: relative
 			&__items
+				.load
+					margin: 0 auto
+					display: block
+				.BtnLoad
+					margin: 0 auto
+					cursor: pointer
+					width: 137px
+					padding: 5px
+					border-radius: 7px
+					background-color: #a8a8a8
+					text-align: center
+					color: white
+					&:hover
+						background-color: rgba(15, 255, 40, 0.9)
+				&--item
+					display: flex
+					flex-wrap: wrap
+					justify-content: center
+					border: 1px solid rgba(0, 0, 0, 0.21)
+					margin-bottom: 30px
+					border-radius: 10px
+					.img
+						border-radius: 10px
+						flex-grow: 1
+						flex-basis: 400px
+						order: 1
+						overflow: hidden
+						max-width: 400px
+						margin: 20px
+						img
+							width: 100%
+							height: 100%
+							
+					.right
+						order: 1
+					
+					.wrapperItems
+						flex-grow: 2
+						flex-basis: 350px
+						padding: 20px
+						background-color: rgb(244, 244, 244)
+						border-radius: 10px
+						margin: 20px
+						h4
+							font-size: 20px
+							text-align: center
+						&__description
+							padding: 20px
+							color: rgba(0, 0, 0, 0.9)
+						&__data
+							font-size: 15px
+							font-style: italic
+							color: rgba(0, 0, 0, 0.5)
+
 				button
 					position: absolute
-					bottom: -10px
+					bottom: -40px
 					left: 50%
 					width: 100px
 					height: 20px
 					transform: translateX(-50%)
-			
-.clearfix
-	clear: both
+					
+@media screen and (max-width: 1126px)
+	.blogWrapper__content .content__items--item .img
+		order: 0
+	
