--- a/src/components/App/App.sass
+++ b/src/components/App/App.sass
@@ -6,7 +6,8 @@
 body
 	width: 100%
 	height: 100vh
-	font-family: Hind,sans-serif
+	font-family: lato,sans-serif
+	line-height: 25px
 	background-image: url('/img/body/bg.jpg')
 	background-position: center center
 	background-size: cover
