--- a/src/components/Blog/ViewBlog/ViewBlog.sass
+++ b/src/components/Blog/ViewBlog/ViewBlog.sass
@@ -9,6 +9,13 @@
 		text-align: center
 		padding: 20px
 	&__item
+		hr
+			margin-top: 30px
+			color: white
+		&--data
+			text-align: right
+			font-size: 12px
+			font-style: italic
 		&--img
 			float: left
 			img
