--- a/src/components/App/App.sass
+++ b/src/components/App/App.sass
@@ -39,6 +39,7 @@ body
 		color: white
 		min-height: 100vh
 		margin-right: 20px
+		transition: all 0.3s linear
 		
 .maseeg
 	max-width: 350px
@@ -54,3 +55,23 @@ body
 	border: 5px solid rgba(11, 79, 19, 0.5)
 	border-radius: 5px
 	text-align: center
+	
+@media screen and (max-width: 870px)
+	.wrapper
+		overflow: visible
+	
+	.wrapper .nav
+		display: none
+	.wrapper .main
+		margin: 0
+		.mainTitle
+			left: 50%
+			transform: translateX(-50% )
+			
+		.mainText__wrapper
+			text-align: center
+			h1
+				font-size: 15px
+				padding: 10px 0
+			&--name
+				font-size: 15px
