--- a/src/components/Contacts/Contacts.sass
+++ b/src/components/Contacts/Contacts.sass
@@ -66,7 +66,7 @@
 
 		
 		&__contacts
-			padding: 0 35px
+			//padding: 0 35px
 			text-align: center
 			flex-grow: 1
 			flex-basis: 250px
@@ -81,7 +81,7 @@
 				color: white
 			span
 				display: inline-block
-				margin: 20px
+				margin: 20px 0
 				line-height: 25px
 				font-size: 20px
 				font-weight: 300
