--- a/src/components/Contacts/Contacts.sass
+++ b/src/components/Contacts/Contacts.sass
@@ -8,8 +8,9 @@
 		box-shadow: 0 0 10px #fff
 		h3
 			text-align: center
-			padding: 20px
+			padding: 20px 0 30px
 			font-size: 30px
+			font-style: italic
 			
 	.formWrapper
 		display: flex
