--- a/src/components/About/About.sass
+++ b/src/components/About/About.sass
@@ -1,8 +1,65 @@
 .aboutWrapper
-	&__content
+	.content
 		margin-top: 120vh
 		background-color: #fff
 		color: black
 		border-radius: 10px 10px 0 0
 		padding: 5px
 		box-shadow: 0 0 10px #fff
+		h3
+			text-align: center
+			padding: 20px 0 40px
+			font-size: 30px
+			font-style: italic
+			
+		&__wrapper
+			display: flex
+			flex-wrap: wrap
+			&--photo
+				flex-grow: 1
+				flex-basis: 350px
+				display: flex
+				justify-content: center
+				.img
+					border: 2px solid black
+					background-image: url('/img/dotted.png')
+					max-width: 350px
+					max-height: 450px
+					img
+						width: 100%
+						height: 100%
+						position: relative
+						bottom: 20px
+						right: 20px
+				
+			&--desc
+				flex-grow: 1
+				flex-basis: 350px
+				h4
+					padding: 20px 0
+					text-align: center
+				p
+					padding: 5px
+					color: rgba(0, 0, 0, 0.8)
+				a
+					text-decoration: none
+					font-style: italic
+					display: inline-flex
+					color: black
+					font-weight: bold
+				h5
+					font-size: 20px
+					padding: 20px
+				.cv
+					width: 27px
+					height: 27px
+					margin-right: 5px
+
+				.technology
+					text-align: center
+					img
+						
+						max-height: 100px
+						margin: 10px
+				
+				
