--- a/src/components/App/App.sass
+++ b/src/components/App/App.sass
@@ -8,7 +8,7 @@ body
 	height: 100vh
 	font-family: lato,sans-serif
 	line-height: 25px
-	background-image: url('/img/body/bg.jpg')
+	background-image: url('/img/body/bg1.jpg')
 	background-position: center center
 	background-size: cover
 	background-attachment: fixed
@@ -16,7 +16,7 @@ body
 		content: ''
 		width: 100%
 		height: 100%
-		background-color: rgba(0, 0, 0, 0.5)
+		background-color: rgba(0, 0, 0, 0.9)
 		position: fixed
 		top: 0
 		z-index: -2
@@ -40,6 +40,9 @@ body
 		min-height: 100vh
 		margin-right: 20px
 		transition: all 0.3s linear
+
+	.mobile
+		display: none
 		
 .maseeg
 	max-width: 350px
@@ -59,19 +62,25 @@ body
 @media screen and (max-width: 870px)
 	.wrapper
 		overflow: visible
-	
-	.wrapper .nav
-		display: none
+		flex-wrap: wrap
+	.wrapper
+		.nav
+			display: none
+		.mobile
+			display: block
 	.wrapper .main
 		margin: 0
 		.mainTitle
 			left: 50%
 			transform: translateX(-50% )
+			text-align: center
+			width: 100%
 			
 		.mainText__wrapper
 			text-align: center
 			h1
-				font-size: 15px
-				padding: 10px 0
+				font-size: 25px
+				padding: 50px 0
+				line-height: 30px
 			&--name
-				font-size: 15px
+				font-size: 20px
