--- a/src/components/Blog/ViewBlog/ViewBlog.sass
+++ b/src/components/Blog/ViewBlog/ViewBlog.sass
@@ -9,6 +9,7 @@
 		text-align: center
 		padding: 20px
 	&__item
+		
 		hr
 			margin-top: 30px
 			color: white
@@ -23,6 +24,7 @@
 				width: 100%
 	p
 		margin: 10px
+		color: rgba(0, 0, 0, 0.8)
 		
 	.clearfix
 		clear: both
