--- a/src/components/App/App.sass
+++ b/src/components/App/App.sass
@@ -9,14 +9,14 @@ body
 	font-family: lato,sans-serif
 	line-height: 25px
 	background-image: url('/img/body/bg1.jpg')
-	background-position: center center
+	background-position: top right
 	background-size: cover
 	background-attachment: fixed
 	&:after
 		content: ''
 		width: 100%
 		height: 100%
-		background-color: rgba(0, 0, 0, 0.3)
+		background-color: rgba(0, 0, 0, 0.9)
 		position: fixed
 		top: 0
 		z-index: -2
