--- a/src/components/Main/Main.sass
+++ b/src/components/Main/Main.sass
@@ -6,21 +6,15 @@
 	height: 100%
 	&__wrapper
 	
-		//text-shadow: 0 0 30px #090847
-		//font-weight: bold
-		//-webkit-text-stroke: 2px rgba(0,0,0, 0.3)
+		text-shadow: 0 0 30px #aeaeae
+		font-weight: 700
+		
 		
 		&--name
 			font-size: 35px
 			letter-spacing: 10px
-			color: transparent
-			background-image: linear-gradient(to right, #12e0cd 0%, #16cc14 100%)
-			background-clip: text
-			display: block
-			line-height: 1
+			color: #13a99f
 		h1
 			padding: 20px 0 20px 130px
 			letter-spacing: 5px
-			background-image: linear-gradient(to right, #03e061 0%, #4aa3cc 100%)
-			background-clip: text
-			color: transparent
+			color: #13b706
