--- a/src/components/Nav/Nav.sass
+++ b/src/components/Nav/Nav.sass
@@ -10,7 +10,10 @@ ul
 		a
 			text-decoration: none
 			color: transparent
+			background-image: -webkit-gradient(linear, left top, right top, from(#12e0cd), to(#15a814))
+			background-image: -o-linear-gradient(left, #12e0cd 0%, #15a814 100%)
 			background-image: linear-gradient(to right, #12e0cd 0%, #15a814 100%)
+			-webkit-background-clip: text
 			background-clip: text
 			line-height: 1
 			font-size: 20px
