--- a/src/components/Title/Title.sass
+++ b/src/components/Title/Title.sass
@@ -4,12 +4,10 @@
 	left: 50%
 	transform: translateX(calc(-25% + 20px))
 	font-size: 40px
-	text-shadow: 0 0 30px #888888
+	text-shadow: 0 0 30px #12e0cd
 	font-weight: bold
-	-webkit-text-stroke: 2px rgba(0,0,0, 0.3)
+	
 	z-index: -1
 	letter-spacing: 5px
-	color: transparent
-	background-image: linear-gradient(to right, #12e0cd 0%, #16cc14 100%)
-	background-clip: text
+	color: white
 	line-height: 1
