--- a/src/components/Main/Main.sass
+++ b/src/components/Main/Main.sass
@@ -6,14 +6,13 @@
 	height: 100%
 	&__wrapper
 	
-		text-shadow: 0 0 30px #aeaeae
 		font-weight: 700
 		
 		
 		&--name
 			font-size: 35px
 			letter-spacing: 10px
-			color: #13a99f
+			color: #02a8f4
 		h1
 			padding: 20px 0 20px 130px
 			letter-spacing: 5px
