--- a/src/components/Social/Social.sass
+++ b/src/components/Social/Social.sass
@@ -15,5 +15,5 @@
 		text-decoration: none
 		transition: transform 0.3s linear
 		&:hover
-			box-shadow: 0 0 10px #fff
+			box-shadow: 0 0 10px #02a8f4
 			transform: scale(1.3)
