--- a/src/components/Nav/Nav.sass
+++ b/src/components/Nav/Nav.sass
@@ -10,9 +10,9 @@ ul
 		a
 			text-decoration: none
 			color: transparent
-			background-image: -webkit-gradient(linear, left top, right top, from(#12e0cd), to(#15a814))
-			background-image: -o-linear-gradient(left, #12e0cd 0%, #15a814 100%)
-			background-image: linear-gradient(to right, #12e0cd 0%, #15a814 100%)
+			background-image: -webkit-gradient(linear, left top, right top, from #02a8f4, to(#15a814))
+			background-image: -o-linear-gradient(left, #02a8f4 0%, #15a814 100%)
+			background-image: linear-gradient(to right, #02a8f4 0%, #15a814 100%)
 			-webkit-background-clip: text
 			background-clip: text
 			line-height: 1
