--- a/src/components/App/App.sass
+++ b/src/components/App/App.sass
@@ -3,21 +3,20 @@
 	padding: 0
 	box-sizing: border-box
 
-.main-wrapper
+body
 	width: 100%
+	height: 100vh
 	font-family: lato,sans-serif
 	line-height: 25px
 	background-image: url('/img/body/bg1.jpg')
 	background-position: top right
 	background-size: cover
 	background-attachment: fixed
-	position: relative
-	z-index: 1
 	&:after
 		content: ''
 		width: 100%
 		height: 100%
-		background-color: rgba(0, 0, 0, 0.7)
+		background-color: rgba(0, 0, 0, 0.9)
 		position: fixed
 		top: 0
 		z-index: -2
